Fixed OK and Cancel buttons in ModPlugin.

--- a/ModPlugin/ModPlugin.rc
+++ b/ModPlugin/ModPlugin.rc
@@ -150,7 +150,8 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,139,115,10
     CONTROL         "Interpolated Mixing",IDC_INTERPOLATED,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,109,78,10
-    PUSHBUTTON      "Cancel",IDC_CANCEL,95,2,44,11
+    PUSHBUTTON      "OK",IDOK,65,2,44,11
+    PUSHBUTTON      "Cancel",IDCANCEL,95,2,44,11
     LTEXT           "BASSMod Plugin Config",IDC_TITLE,5,3,74,9
     GROUPBOX        "Updated After Restarting GSPlayer",IDC_STATIC,3,15,132,
                     37
