--- a/gspmidi/gspmidi/wce/gspmidi.rc
+++ b/gspmidi/gspmidi/wce/gspmidi.rc
@@ -108,6 +108,8 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,5,106,56,10
     CONTROL         "Free instruments afterwards",IDC_CHECK_FREEINST,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,5,118,122,10
+    CONTROL         "Fast Envelopes",IDC_CHECK_FASTENV,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,5,136,144,10
     PUSHBUTTON      "About...",IDC_ABOUT,85,130,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,96,2,39,11
 END
@@ -143,6 +145,8 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,12,68,56,10
     CONTROL         "&Free instruments afterwards",IDC_CHECK_FREEINST,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,76,68,122,10
+    CONTROL         "Fast En&velopes",IDC_CHECK_FASTENV,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,152,68,244,10
     PUSHBUTTON      "About...",IDC_ABOUT,77,82,50,14
     PUSHBUTTON      "OK",IDOK,137,82,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,197,82,50,14
