--- a/GSPlayer2/WinCE_SP/GSPlayer2.vcproj
+++ b/GSPlayer2/WinCE_SP/GSPlayer2.vcproj
@@ -76,7 +76,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/ALIGN:4096 /subsystem:$(CESubsystem)  "
-				AdditionalDependencies="commctrl.lib coredll.lib aygshell.lib winsock.lib ../../lib/ARMV4Rel/libmad.lib ../../lib/ARMV4Rel/libovd.lib ../../lib/ARMV4Dbg/maplay.lib"
+				AdditionalDependencies="commctrl.lib coredll.lib aygshell.lib winsock.lib ../../lib/ARMV4Dbg/libmad.lib ../../lib/ARMV4Dbg/libovd.lib ../../lib/ARMV4Dbg/maplay.lib"
 				OutputFile="$(PlatformName)\$(ConfigurationName)/GSPlayer2.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
