--- a/gspmidi/gspmidi/win32/gspmidi.rc
+++ b/gspmidi/gspmidi/win32/gspmidi.rc
@@ -91,7 +91,7 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,130,90,105,10
     CONTROL         "&Free instruments afterwards",IDC_CHECK_FREEINST,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,15,105,115,10
-    CONTROL         "Fast En&velopes",IDC_CHECK_FASTENV,"Button",
+    CONTROL         "Fast &Envelopes",IDC_CHECK_FASTENV,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,130,105,115,10
     DEFPUSHBUTTON   "OK",IDOK,130,125,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,190,125,50,14
