--- a/ModPlugin/ModPlugin.rc
+++ b/ModPlugin/ModPlugin.rc
@@ -122,7 +122,7 @@ END
 //
 
 IDD_CONFIG DIALOG DISCARDABLE  0, 0, 141, 156
-STYLE WS_POPUP | WS_CAPTION
+STYLE DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "ModPlugin Config"
 FONT 8, "System"
 BEGIN
