--- a/ModPlugin/ModPlugin.rc
+++ b/ModPlugin/ModPlugin.rc
@@ -126,33 +126,33 @@ STYLE DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "ModPlugin Config"
 FONT 8, "System"
 BEGIN
+    LTEXT           "Sampling &Rate:",IDC_STATIC,7,28,49,8
     COMBOBOX        IDC_SAMPLERATE,65,26,66,102,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Sampling Rate:",IDC_STATIC,7,28,49,8
-    CONTROL         "16 Bit Sound",IDC_16BIT,"Button",BS_AUTOCHECKBOX | 
+    CONTROL         "&16 Bit Sound",IDC_16BIT,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,7,40,56,10
-    CONTROL         "Stereo Sound",IDC_STEREO,"Button",BS_AUTOCHECKBOX | 
+    CONTROL         "&Stereo Sound",IDC_STEREO,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,65,40,59,10
+    LTEXT           "Ra&mping:",IDC_STATIC,7,66,31,8
     COMBOBOX        IDC_RAMPING,65,63,66,43,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
-    LTEXT           "Ramping:",IDC_STATIC,7,66,31,8
+    LTEXT           "Mod &Playback:",IDC_STATIC,7,95,47,8
     COMBOBOX        IDC_MODMODE,65,92,66,44,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
+    LTEXT           "Surroun&d Sound:",IDC_STATIC,7,80,55,8
     COMBOBOX        IDC_SURROUND,65,77,66,51,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
-    LTEXT           "Mod Playback:",IDC_STATIC,7,95,47,8
-    LTEXT           "Surround Sound:",IDC_STATIC,7,80,55,8
-    CONTROL         "Looping",IDC_LOOP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
+    CONTROL         "&Looping",IDC_LOOP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
                     7,123,41,10
-    CONTROL         "Prevent Jump Backs",IDC_JUMPBACK,"Button",
+    CONTROL         "Prevent &Jump Backs",IDC_JUMPBACK,"Button",
                     BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,65,119,63,19
-    CONTROL         "Stop Notes on Position Change",IDC_POSRESET,"Button",
+    CONTROL         "Stop &Notes on Position Change",IDC_POSRESET,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,139,115,10
-    CONTROL         "Interpolated Mixing",IDC_INTERPOLATED,"Button",
+    CONTROL         "&Interpolated Mixing",IDC_INTERPOLATED,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,109,78,10
     PUSHBUTTON      "OK",IDOK,65,2,44,11
     PUSHBUTTON      "Cancel",IDCANCEL,95,2,44,11
-    PUSHBUTTON      "About...",IDC_ABOUT,125,2,44,11
+    PUSHBUTTON      "&About...",IDC_ABOUT,125,2,44,11
     LTEXT           "BASSMod Plugin Config",IDC_TITLE,5,3,74,9
     GROUPBOX        "Updated After Restarting GSPlayer",IDC_STATIC,3,15,132,
                     37
