--- a/ModPlugin/ModPlugin.rc
+++ b/ModPlugin/ModPlugin.rc
@@ -154,6 +154,8 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,139,115,10
     CONTROL         "&Interpolated Mixing",IDC_INTERPOLATED,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,109,78,10
+    CONTROL         "&Calculate Length",IDC_CALCLEN,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,79,48,10
     PUSHBUTTON      "OK",IDOK,65,2,44,11
     PUSHBUTTON      "Cancel",IDCANCEL,95,2,44,11
     PUSHBUTTON      "&About...",IDC_ABOUT,125,2,44,11
