Added hotkey to About... button in Windows CE gspmidi dialog.

--- a/gspmidi/gspmidi/wce/gspmidi.rc
+++ b/gspmidi/gspmidi/wce/gspmidi.rc
@@ -157,7 +157,7 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,76,68,122,10
     CONTROL         "Fast &Envelopes",IDC_CHECK_FASTENV,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,152,68,244,10
-    PUSHBUTTON      "About...",IDC_ABOUT,77,82,50,14
+    PUSHBUTTON      "&About...",IDC_ABOUT,77,82,50,14
     PUSHBUTTON      "OK",IDOK,137,82,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,197,82,50,14
 END
